--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,4 +12,7 @@
       .row
         .col-sm-12
           = render 'layouts/header'
-    = yield
+
+      .row
+        .col-sm-12
+          = yield
