--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,9 @@
           .row
             .col-sm-12
               = render 'layouts/message'
-            .col-sm-12
+            .col-sm-10
+              = breadcrumbs style: :bootstrap
+            .col-sm-2
               = render 'layouts/action_menu'
             .col-sm-12
               = yield
