Modalで子フォルダが作れるようになった。

--- a/app/views/layouts/_action_menu.html.haml
+++ b/app/views/layouts/_action_menu.html.haml
@@ -3,5 +3,5 @@
     = link_to '#', title: "ファイルのアップロード" do
       %i.glyphicon.glyphicon-open-file
   %button.btn.btn-default
-    = link_to '#', title: "フォルダの新規作成" do
+    = link_to new_folder_folder_path(@folder), title: "フォルダの新規作成", remote: true do
       %i.glyphicon.glyphicon-folder-close
