--- a/app/views/folders/_folder.html.haml
+++ b/app/views/folders/_folder.html.haml
@@ -1,4 +1,7 @@
 %tr
-  %td= folder.name
+  %td
+    = folder.name
+    = link_to [ :edit, @folder, folder ], title: 'フォルダ名更新', remote: true do
+      %i.glyphicon.glyphicon-pencil
   %td= folder.updated_at
   %td --
