--- a/app/views/folders/_modal_folder.html.haml
+++ b/app/views/folders/_modal_folder.html.haml
@@ -1,11 +1,3 @@
 #folder_modal.modal
   .modal-dialog
-    .modal-content
-      .modal-header
-        %button{ class: "close", data: { dismiss: "modal" }, aria: { hidden: "true" } }☓
-        %h4.modal-title フォルダ名を入力してください
-
-      #folder_modal_body.modal-body
-
-      .modal-footer
-        %button{ class: "btn btn-default", data: { dismiss: "modal" } } Close
+    #folder_modal_body.modal-content
