--- a/app/views/layouts/_action_menu.html.haml
+++ b/app/views/layouts/_action_menu.html.haml
@@ -1,6 +1,6 @@
 .btn-group.pull-right
   %button.btn.btn-default
-    = link_to '#', title: "ファイルのアップロード" do
+    = link_to new_folder_folder_file_path(@folder), title: "ファイルのアップロード" do
       %i.glyphicon.glyphicon-open-file
   %button.btn.btn-default
     = link_to new_folder_folder_path(@folder), title: "フォルダの新規作成", remote: true do
