folder に all_childrenで子フォルダと子ファイルをすべて返すように変更
一覧表示箇所で、ファイル用のpartialを追加。

--- a/app/views/folders/show.html.haml
+++ b/app/views/folders/show.html.haml
@@ -8,6 +8,6 @@
       %th 共有中のユーザー
       %th
   %tbody
-    = render @folder.children
+    = render @folder.all_children
 
 = render 'modal_folder'
