--- a/app/views/folders/_folder.html.haml
+++ b/app/views/folders/_folder.html.haml
@@ -1,5 +1,7 @@
 %tr
   %td
+    %i.glyphicon.glyphicon-folder-close.glyphicon-icon-color
+  %td
     = link_to folder.name, folder
     = link_to [ :edit, @folder, folder ], title: 'フォルダ名更新', remote: true do
       %i.glyphicon.glyphicon-pencil
