--- a/app/views/folders/_folder.html.haml
+++ b/app/views/folders/_folder.html.haml
@@ -8,7 +8,7 @@
     = link_to [ :move, @folder, folder ], title: 'フォルダの移動', remote: true do
       %i.glyphicon.glyphicon-share-alt
   %td= folder.updated_at
-  %td --
+  %td= link_to '共有する', new_folder_sharing_folder_path(@folder), remote: true, class: "btn btn-default btn-sm"
   %td
     = link_to [ @folder, folder ], method: :delete, class: "text-danger", title: '削除',  data: { confirm: "本当に削除しますか？" } do
       %i.glyphicon.glyphicon-trash
