--- a/app/views/sharing_files/_form.html.haml
+++ b/app/views/sharing_files/_form.html.haml
@@ -1,11 +1,11 @@
 .modal-header
   %button{ class: "close", data: { dismiss: "modal" }, aria: { hidden: "true" } }☓
-  %h4.modal-title= 共有したいユーザーを選んでください
+  %h4.modal-title 共有したいユーザーを選んでください
 
 .modal-body
-  %label=@folder.name
-  = simple_form_for [@folder, @sharing_folder] do |f|
-    = f.input :folder_id, as: :hidden
+  %label=@folder_file.name
+  = simple_form_for [@folder, @folder_file, @sharing_folder_file] do |f|
+    = f.input :folder_file_id, as: :hidden
     = f.input :user_id, as: :select, collection: current_user.other_users.map{|u| [ "#{u.user_name} (#{u.email})", u.id]}
     = f.button :submit, class: "btn btn-primary"
 
