--- a/app/views/sharing_folders/_form.html.haml
+++ b/app/views/sharing_folders/_form.html.haml
@@ -1,6 +1,6 @@
 .modal-header
   %button{ class: "close", data: { dismiss: "modal" }, aria: { hidden: "true" } }☓
-  %h4.modal-title= 共有したいユーザーを選んでください
+  %h4.modal-title 共有したいユーザーを選んでください
 
 .modal-body
   %label=@folder.name
