他のユーザーから共有されたファイル一覧を表示出来るようにした。

--- a/app/views/layouts/_side_menu.html.haml
+++ b/app/views/layouts/_side_menu.html.haml
@@ -1,4 +1,4 @@
 %ul.list-group
   %li.list-group-item= link_to 'ファイル', root_path
-  %li.list-group-item= link_to 'チーム', '#'
+  %li.list-group-item= link_to '共有されたファイル', shared_files_path
   %li.list-group-item= link_to 'Paper', '#'
